--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/8. 动态时钟框架(CONFIG_NO_HZ、tickless).md
+++ b/Linux/Time/Linux时间子系统/8. 动态时钟框架(CONFIG_NO_HZ、tickless).md
@@ -9,7 +9,22 @@
 
 # 低分辨率下的动态时钟
 
+回看之前一篇文章：Linux时间子系统之四：定时器的引擎：clock_event_device中的关于tick_device一节，不管tick_device的工作模式（周期触发或者是单次触发），tick_device所关联的clock_event_device的事件回调处理函数都是：tick_handle_periodic，不管当前是否处于idle状态，他都会精确地按HZ数来提供周期性的tick事件，这不符合动态时钟的要求，所以，要使动态时钟发挥作用，系统首先要切换至支持动态时钟的工作模式：NOHZ_MODE_LOWRES 。
+
 ## 切换至动态时钟模式
+
+动态时钟模式的切换过程的前半部分和切换至高精度定时器模式所经过的路径是一样的，请参考：Linux时间子系统之六：高精度定时器（HRTIMER）的原理和实现。这里再简单描述一下过程：系统工作于周期时钟模式，定期地发出tick事件中断，tick事件中断触发定时器软中断：TIMER_SOFTIRQ，执行软中断处理函数run_timer_softirq，run_timer_softirq调用hrtimer_run_pending函数：
+
+```cpp
+void hrtimer_run_pending(void)
+{
+	if (hrtimer_hres_active())
+		return;
+        ......
+	if (tick_check_oneshot_change(!hrtimer_is_hres_enabled()))
+		hrtimer_switch_to_hres();
+}
+```
 
 ## 低分辨率动态时钟下的事件中断处理函数
 
@@ -18,6 +33,13 @@
 ## 动态时钟: 重新开启周期tick时钟事件
 
 # 高精度模式下的动态时钟
+
+高精度模式和低分辨率模式的主要区别是在切换过程中，怎样切换到高精度模式，我已经在上一篇文章中做了说明，切换到高精度模式后，动态时钟的开启和关闭和低分辨率模式下没有太大的区别，也是通过tick_nohz_stop_sched_tick和tick_nohz_restart来控制，在这两个函数中，分别判断了当前的两种模式：
+
+* NOHZ\_MODE\_HIGHRES
+* NOHZ\_MODE\_LOWRES
+
+如果是NOHZ_MODE_HIGHRES则对tick_sched结构的sched_timer定时器进行设置，如果是NOHZ_MODE_LOWRES，则直接对tick_device进行操作
 
 # 动态时钟对中断的影响
 
