--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -79,7 +79,107 @@ hrtimer_start_range_ns(struct hrtimer *timer, ktime_t tim,
 int hrtimer_cancel(struct hrtimer *timer);
 ```
 
+以下两个函数用于推后定时器的到期时间：
+
+```cpp
+extern u64
+hrtimer_forward(struct hrtimer *timer, ktime_t now, ktime_t interval);
+ 
+/* Forward a hrtimer so it expires after the hrtimer's current now */
+static inline u64 hrtimer_forward_now(struct hrtimer *timer,
+				      ktime_t interval)
+{
+	return hrtimer_forward(timer, timer->base->get_time(), interval);
+}
+```
+
+以下几个函数用于获取定时器的当前状态：
+
+```cpp
+static inline int hrtimer_active(const struct hrtimer *timer)
+{
+	return timer->state != HRTIMER_STATE_INACTIVE;
+}
+ 
+static inline int hrtimer_is_queued(struct hrtimer *timer)
+{
+	return timer->state & HRTIMER_STATE_ENQUEUED;
+}
+ 
+static inline int hrtimer_callback_running(struct hrtimer *timer)
+{
+	return timer->state & HRTIMER_STATE_CALLBACK;
+}
+```
+
+hrtimer_init最终会进入__hrtimer_init函数，该函数的主要目的是初始化hrtimer的base字段，同时初始化作为红黑树的节点的node字段：
+
+```cpp
+static void __hrtimer_init(struct hrtimer *timer, clockid_t clock_id,
+			   enum hrtimer_mode mode)
+{
+	struct hrtimer_cpu_base *cpu_base;
+	int base;
+ 
+	memset(timer, 0, sizeof(struct hrtimer));
+ 
+	cpu_base = &__raw_get_cpu_var(hrtimer_bases);
+ 
+	if (clock_id == CLOCK_REALTIME && mode != HRTIMER_MODE_ABS)
+		clock_id = CLOCK_MONOTONIC;
+ 
+	base = hrtimer_clockid_to_base(clock_id);
+	timer->base = &cpu_base->clock_base[base];
+	timerqueue_init(&timer->node);
+        ......
+}
+```
+
+hrtimer_start和hrtimer_start_range_ns最终会把实际的工作交由__hrtimer_start_range_ns来完成：
+
+```cpp
+int __hrtimer_start_range_ns(struct hrtimer *timer, ktime_t tim,
+		unsigned long delta_ns, const enum hrtimer_mode mode,
+		int wakeup)
+{
+        ......        
+        /* 取得hrtimer_clock_base指针 */
+        base = lock_hrtimer_base(timer, &flags); 
+        /* 如果已经在红黑树中，先移除它: */
+        ret = remove_hrtimer(timer, base); ......
+        /* 如果是相对时间，则需要加上当前时间，因为内部是使用绝对时间 */
+        if (mode & HRTIMER_MODE_REL) {
+                tim = ktime_add_safe(tim, new_base->get_time());
+                ......
+        } 
+        /* 设置到期的时间范围 */
+        hrtimer_set_expires_range_ns(timer, tim, delta_ns);
+        ...... 
+        /* 把hrtime按到期时间排序，加入到对应时间基准系统的红黑树中 */
+        /* 如果该定时器的是最早到期的，将会返回true */
+        leftmost = enqueue_hrtimer(timer, new_base);
+        /* 
+        * Only allow reprogramming if the new base is on this CPU. 
+        * (it might still be on another CPU if the timer was pending) 
+        * 
+        * XXX send_remote_softirq() ?
+        * 定时器比之前的到期时间要早，所以需要重新对tick_device进行编程，重新设定的的到期时间
+        */
+        if (leftmost && new_base->cpu_base == &__get_cpu_var(hrtimer_bases))
+                hrtimer_enqueue_reprogram(timer, new_base, wakeup);
+        unlock_hrtimer_base(timer, &flags);
+        return ret;
+}
+```
+
 ## 3.2. hrtimer的到期处理
+
+高精度定时器系统有3个入口可以对到期定时器进行处理，它们分别是：
+
+* 没有切换到高精度模式时，在每个jiffie的tick事件中断中进行查询和处理；
+* 在HRTIMER_SOFTIRQ软中断中进行查询和处理；
+* 切换到高精度模式后，在每个clock_event_device的到期事件中断中进行查询和处理；
+
 
 
 # 4. 参考
