--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -32,6 +32,8 @@ struct hrtimer {
 };
 ```
 
+定时器的到期时间用ktime_t来表示，_softexpires字段记录了时间，定时器一旦到期，function字段指定的回调函数会被调用，该函数的返回值为一个枚举值，它决定了该hrtimer是否需要被重新激活：
+
 
 # 3. hrtimer如何运转
 
@@ -135,7 +137,7 @@ static void __hrtimer_init(struct hrtimer *timer, clockid_t clock_id,
 }
 ```
 
-hrtimer_start和hrtimer_start_range_ns最终会把实际的工作交由__hrtimer_start_range_ns来完成：
+`hrtimer_start`和`hrtimer_start_range_ns`最终会把实际的工作交由`__hrtimer_start_range_ns`来完成：
 
 ```cpp
 int __hrtimer_start_range_ns(struct hrtimer *timer, ktime_t tim,
