--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/虚拟机时钟模拟/时钟模拟之PIT(8254).md
+++ b/Virtualization/KVM/源码分析/虚拟机时钟模拟/时钟模拟之PIT(8254).md
@@ -43,7 +43,7 @@ kvm_create_pit
 
 说到这个函数我不得不申明一下，我先列出的函数是kmod-2.6.36版本的，这与之前的2.6.33版本有很大改变，这个变化会在后文中进行比较和讨论。
 
-```
+```cpp
 struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
 {
      ... ...
