--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -32,8 +32,87 @@ struct hrtimer {
 };
 ```
 
-定时器的**到期时间**用ktime_t来表示，_softexpires字段记录了时间，定时器一旦到期，function字段指定的回调函数会被调用，该函数的返回值为一个枚举值，它决定了该hrtimer是否需要被重新激活：
+定时器的**到期时间**用`ktime_t`来表示，\_**softexpires**字段记录了**时间**，**定时器一旦到期**，function字段指定的回调函数会被调用，该函数的返回值为一个枚举值，它决定了该hrtimer**是否需要被重新激活**：
 
+```cpp
+enum hrtimer_restart {
+	HRTIMER_NORESTART,	/* Timer is not restarted */
+	HRTIMER_RESTART,	/* Timer must be restarted */
+};
+```
+
+state字段用于表示hrtimer当前的状态，有几下几种位组合：
+
+```cpp
+#define HRTIMER_STATE_INACTIVE	0x00  // 定时器未激活
+#define HRTIMER_STATE_ENQUEUED	0x01  // 定时器已经被排入红黑树中
+#define HRTIMER_STATE_CALLBACK	0x02  // 定时器的回调函数正在被调用
+#define HRTIMER_STATE_MIGRATE	0x04  // 定时器正在CPU之间做迁移
+```
+
+hrtimer的**到期时间**可以基于以下几种**时间基准系统**：
+
+```cpp
+enum  hrtimer_base_type {
+	HRTIMER_BASE_MONOTONIC,  // 单调递增的monotonic时间，不包含休眠时间
+	HRTIMER_BASE_REALTIME,   // 平常使用的墙上真实时间
+	HRTIMER_BASE_BOOTTIME,   // 单调递增的boottime，包含休眠时间
+	HRTIMER_MAX_CLOCK_BASES, // 用于后续数组的定义
+};
+```
+
+和低分辨率定时器一样，处于效率和上锁的考虑，**每个cpu**单独管理属于**自己的hrtimer**，为此，专门定义了一个结构`hrtimer_cpu_base`：
+
+```cpp
+struct hrtimer_cpu_base {
+        ......
+	struct hrtimer_clock_base	clock_base[HRTIMER_MAX_CLOCK_BASES];
+};
+```
+
+其中，`clock_base`数组为每种时间基准系统都定义了一个`hrtimer_clock_base`结构，它的定义如下：
+
+```cpp
+struct hrtimer_clock_base {
+	struct hrtimer_cpu_base	*cpu_base;  // 指向所属cpu的hrtimer_cpu_base结构
+        ......
+	struct timerqueue_head	active;     // 红黑树，包含了所有使用该时间基准系统的hrtimer
+	ktime_t			resolution; // 时间基准系统的分辨率
+	ktime_t			(*get_time)(void); // 获取该基准系统的时间函数
+	ktime_t			softirq_time;// 当用jiffies
+	ktime_t			offset;      // 
+};
+```
+
+active字段是一个`timerqueue_head`结构，它实际上是对rbtree的进一步封装：
+
+```cpp
+struct timerqueue_node {
+	struct rb_node node;  // 红黑树的节点
+	ktime_t expires;      // 该节点代表队hrtimer的到期时间，与hrtimer结构中的_softexpires稍有不同
+};
+ 
+struct timerqueue_head {
+	struct rb_root head;          // 红黑树的根节点
+	struct timerqueue_node *next; // 该红黑树中最早到期的节点，也就是最左下的节点
+};
+```
+
+`timerqueue_head`结构在**红黑树的基础**上，增加了一个**next字段**，用于保存树中**最先到期的定时器节点**，实际上就是树的最左下方的节点，有了next字段，当到期事件到来时，系统不必遍历整个红黑树，只要取出next字段对应的节点进行处理即可。
+
+`timerqueue_node`用于表示**一个hrtimer节点**，它在标准红黑树节点`rb_node`的基础上增加了**expires字段**，该字段和hrtimer中的`_softexpires`字段一起，设定了**hrtimer的到期时间的一个范围**，hrtimer可以在`hrtimer._softexpires`至`timerqueue_node.expires`之间的**任何时刻到期**，我们也称`timerqueue_node.expires`为**硬过期时间(hard**)，意思很明显：到了此时刻，定时器一定会到期，有了这个范围可以选择，定时器系统可以让**范围接近的多个定时器**在**同一时刻同时到期**，这种设计可以**降低进程频繁地被hrtimer进行唤醒**。经过以上的讨论，我们可以得出以下的图示，它表明了每个cpu上的hrtimer是如何被组织在一起的：
+
+每个cpu的hrtimer组织结构:
+
+![2020-01-15-14-19-46.png](./images/2020-01-15-14-19-46.png)
+
+总结一下：
+
+* **每个cpu**有一个`hrtimer_cpu_base`结构；
+* `hrtimer_cpu_base`结构管理着**3种不同的时间基准系统的hrtimer**，分别是：实时时间，启动时间和单调时间；
+* 每种时间基准系统通过它的active字段（`timerqueue_head`结构指针），指向它们各自的红黑树；
+* 红黑树上，按到期时间进行排序，最先到期的hrtimer位于最左下的节点，并被记录在active.next字段中；
+* **3种时间基准**的最先到期时间可能不同，所以，它们之中最先到期的时间被记录在`hrtimer_cpu_base`的expires_next字段中。
 
 # 3. hrtimer如何运转
 
@@ -55,7 +134,7 @@ void hrtimer_init(struct hrtimer *timer, clockid_t which_clock,
 			 enum hrtimer_mode mode);
 ```
 
-`which_clock`可以是`CLOCK_REALTIME`、`CLOCK_MONOTONIC`、`CLOCK_BOOTTIME`中的一种，mode则可以是相对时间`HRTIMER_MODE_REL`，也可以是绝对时间`HRTIMER_MODE_ABS`。设定回调函数：
+`which_clock`可以是`CLOCK_REALTIME`、`CLOCK_MONOTONIC`、`CLOCK_BOOTTIME`中的一种，mode则可以是**相对时间**`HRTIMER_MODE_REL`，也可以是**绝对时间**`HRTIMER_MODE_ABS`。设定回调函数：
 
 ```cpp
 timer.function = hr_callback;
