--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/1. clock source(时钟源).md
+++ b/Linux/Time/Linux时间子系统/1. clock source(时钟源).md
@@ -82,7 +82,7 @@ clocksource结构中有一个**rating字段**，代表着该时钟源的**精度
 
 ## 2.2. read回调函数
 
-时钟源本身不会产生中断，要获得时钟源的当前计数，只能通过主动调用它的read回调函数来获得当前的计数值，注意这里只能获得计数值，也就是所谓的cycle，要获得相应的时间，必须要借助clocksource的mult和shift字段进行转换计算。
+**时钟源本身不会产生中断**，要获得时钟源的当前计数，只能通过主动调用它的read回调函数来获得当前的计数值，注意这里**只能获得计数值**，也就是所谓的cycle，要获得相应的时间，必须要借助clocksource的mult和shift字段进行转换计算。
 
 ## 2.3. mult和shift字段
 
