--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -1,4 +1,17 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 简介](#1-简介)
+- [2. 如何组织hrtimer?](#2-如何组织hrtimer)
+- [3. hrtimer如何运转](#3-hrtimer如何运转)
+  - [3.1. 添加一个hrtimer](#31-添加一个hrtimer)
+  - [3.2. hrtimer的到期处理](#32-hrtimer的到期处理)
+- [4. 参考](#4-参考)
+
+<!-- /code_chunk_output -->
+
 # 1. 简介
 
 上一篇文章，我介绍了传统的低分辨率定时器的实现原理。而随着内核的不断演进，大牛们已经对这种低分辨率定时器的精度不再满足，而且，硬件也在不断地发展，系统中的定时器硬件的精度也越来越高，这也给高分辨率定时器的出现创造了条件。内核从2.6.16开始加入了高精度定时器架构。在实现方式上，内核的高分辨率定时器的实现代码几乎没有借用低分辨率定时器的数据结构和代码，内核文档给出的解释主要有以下几点：
@@ -255,11 +268,16 @@ int __hrtimer_start_range_ns(struct hrtimer *timer, ktime_t tim,
 
 ## 3.2. hrtimer的到期处理
 
-高精度定时器系统有3个入口可以对到期定时器进行处理，它们分别是：
+**高精度定时器系统**有**3个入口**可以对**到期定时器**进行处理，它们分别是：
 
-* 没有切换到高精度模式时，在每个jiffie的tick事件中断中进行查询和处理；
-* 在HRTIMER_SOFTIRQ软中断中进行查询和处理；
-* 切换到高精度模式后，在每个clock_event_device的到期事件中断中进行查询和处理；
+* **没有切换到高精度模式**时，在**每个jiffie**的**tick事件中断**中进行查询和处理；
+* 在`HRTIMER_SOFTIRQ`**软中断**中进行查询和处理；
+* 切换到**高精度模式**后，在每个`clock_event_device`的**到期事件中断**中进行查询和处理；
+
+低精度模式  因为系统并不是一开始就会支持高精度模式，而是在系统启动后的某个阶段，等待所有的条件都满足后，才会切换到高精度模式，当系统还没有切换到高精度模式时，所有的高精度定时器运行在低精度模式下，在每个jiffie的tick事件中断中进行到期定时器的查询和处理，显然这时候的精度和低分辨率定时器是一样的（HZ级别）。低精度模式下，每个tick事件中断中，hrtimer_run_queues函数会被调用，由它完成定时器的到期处理。hrtimer_run_queues首先判断目前高精度模式是否已经启用，如果已经切换到了高精度模式，什么也不做，直接返回：
+————————————————
+版权声明：本文为CSDN博主「DroidPhone」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/DroidPhone/article/details/8074892
 
 
 
