--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
@@ -6,7 +6,7 @@
 - [local APIC寄存器地址](#local-apic寄存器地址)
   - [local APIC寄存器基地址](#local-apic寄存器基地址)
     - [local APIC寄存器重定位](#local-apic寄存器重定位)
-- [2 local APIC寄存器列表](#2-local-apic寄存器列表)
+- [local APIC寄存器列表](#local-apic寄存器列表)
 
 <!-- /code_chunk_output -->
 
