--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -56,7 +56,7 @@ LVT timer提供了三种计数模式。
 
 ### 2.1.1. one-shot计数模式(一次性)
 
-在one\-shot模式里，当current\-count的值减为0时，产生timer中断，**current\-count的值维持在0不变**，除非**写入新的initial\-count值**。
+在one\-shot模式里，当current\-count的值减为0时，产生**timer中断**，**current\-count的值维持在0不变**，除非**写入新的initial\-count值**。
 
 ```x86asm
 ； 设置 LVT timer
