--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -86,7 +86,7 @@ LVT timer提供了三种计数模式。
 
 软件向64位的IA32\_TSC\_DEADLINE寄存器写入非0值时，APIC timer开始计数。当TSC（Time Stamp Counter）值大于或等于IA32\_TSC\_DEADLINE寄存器的值时，将产生timer中断。
 
-```x86asm
+```assembly
 ； 测试是否支持APIC timer TSC-deadline模式
        mov eax，1
        cupid
