--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/8. 动态时钟框架(CONFIG_NO_HZ、tickless).md
+++ b/Linux/Time/Linux时间子系统/8. 动态时钟框架(CONFIG_NO_HZ、tickless).md
@@ -13,7 +13,9 @@
 
 ## 切换至动态时钟模式
 
-动态时钟模式的切换过程的前半部分和切换至高精度定时器模式所经过的路径是一样的，请参考：Linux时间子系统之六：高精度定时器（HRTIMER）的原理和实现。这里再简单描述一下过程：系统工作于周期时钟模式，定期地发出tick事件中断，tick事件中断触发定时器软中断：TIMER_SOFTIRQ，执行软中断处理函数run_timer_softirq，run_timer_softirq调用hrtimer_run_pending函数：
+动态时钟模式的切换过程的前半部分和切换至高精度定时器模式所经过的路径是一样的，请参考：Linux时间子系统之六：高精度定时器（HRTIMER）的原理和实现。
+
+这里再简单描述一下过程：**系统工作于周期时钟模式**，定期地发出tick事件中断，tick事件中断触发定时器软中断：`TIMER_SOFTIRQ`，执行软中断处理函数`run_timer_softirq`，`run_timer_softirq`调用hrtimer_run_pending函数：
 
 ```cpp
 void hrtimer_run_pending(void)
