--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -36,7 +36,7 @@
 * 快速地插入和删除定时器的能力；
 * 排序功能；
 
-内核的开发者考察了多种数据结构，例如基数树、哈希表等等，最终他们选择了**红黑树**（rbtree）来**组织hrtimer**，红黑树已经以库的形式存在于内核中，并被成功地使用在内存管理子系统和文件系统中，随着系统的运行，hrtimer不停地**被创建和销毁**，新的hrtimer按顺序被插入到红黑树中，树的最左边的节点就是最快到期的定时器，内核用一个hrtimer结构来表示一个高精度定时器：
+内核的开发者考察了多种数据结构，例如基数树、哈希表等等，最终他们选择了**红黑树**（rbtree）来**组织hrtimer**，红黑树已经以库的形式存在于内核中，并被成功地使用在内存管理子系统和文件系统中，随着系统的运行，hrtimer不停地**被创建和销毁**，新的hrtimer按顺序**被插入到红黑树**中，树的最左边的节点就是最快到期的定时器，内核用一个hrtimer结构来表示一个高精度定时器：
 
 ```cpp
 struct hrtimer {
@@ -49,7 +49,7 @@ struct hrtimer {
 };
 ```
 
-定时器的**到期时间**用`ktime_t`来表示，\_**softexpires**字段记录了**时间**，**定时器一旦到期**，function字段指定的回调函数会被调用，该函数的返回值为一个枚举值，它决定了该hrtimer**是否需要被重新激活**：
+定时器的**到期时间！！！** 用`ktime_t`来表示，\_**softexpires**字段记录了**时间**，**定时器一旦到期**，function字段指定的回调函数会被调用，该函数的返回值为一个枚举值，它决定了该hrtimer**是否需要被重新激活**：
 
 ```cpp
 enum hrtimer_restart {
@@ -58,7 +58,7 @@ enum hrtimer_restart {
 };
 ```
 
-state字段用于表示hrtimer当前的状态，有几下几种位组合：
+**state字段**用于表示**hrtimer当前的状态**，有几下几种位组合：
 
 ```cpp
 #define HRTIMER_STATE_INACTIVE	0x00  // 定时器未激活
