--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -87,7 +87,7 @@ struct hrtimer_cpu_base {
 };
 ```
 
-其中，`clock_base`数组为每种时间基准系统都定义了一个`hrtimer_clock_base`结构，它的定义如下：
+其中，`clock_base`数组为**每种时间基准系统**都定义了一个`hrtimer_clock_base`结构，它的定义如下：
 
 ```cpp
 struct hrtimer_clock_base {
@@ -282,7 +282,9 @@ int __hrtimer_start_range_ns(struct hrtimer *timer, ktime_t tim,
 
 因为系统并不是一开始就会支持高精度模式，而是在系统启动后的**某个阶段**，等待所有的条件都满足后，**才会切换到高精度模式**，当系统还没有切换到高精度模式时，**所有的高精度定时器**运行在**低精度模式**下，在**每个jiffie**的**tick事件中断**中进行到期定时器的查询和处理，显然这时候的精度和低分辨率定时器是一样的（HZ级别）。
 
-低精度模式下，每个tick事件中断中，`hrtimer_run_queues`函数会被调用，由它完成定时器的到期处理。hrtimer_run_queues首先判断目前高精度模式是否已经启用，如果已经切换到了高精度模式，什么也不做，直接返回：
+低精度模式下，每个tick事件中断中，`hrtimer_run_queues`函数会被调用，由它完成定时器的到期处理。
+
+`hrtimer_run_queues`首先判断**目前高精度模式是否已经启用**，如果已经切换到了高精度模式，什么也不做，直接返回：
 
 ```cpp
 void hrtimer_run_queues(void)
@@ -292,7 +294,7 @@ void hrtimer_run_queues(void)
 		return;
 ```
 
-如果`hrtimer_hres_active`返回false，说明目前处于低精度模式下，则继续处理，它用一个for循环遍历各个时间基准系统，查询每个hrtimer_clock_base对应红黑树的左下节点，判断它的时间是否到期，如果到期，通过__run_hrtimer函数，对到期定时器进行处理，包括：调用定时器的回调函数、从红黑树中移除该定时器、根据回调函数的返回值决定是否重新启动该定时器等等：
+如果`hrtimer_hres_active`返回false，说明**目前处于低精度模式下**，则继续处理，它用一个for循环**遍历各个时间基准系统**，查询**每个hrtimer\_clock\_base**对应红黑树的左下节点，判断它的时间是否到期，如果到期，通过__run_hrtimer函数，对到期定时器进行处理，包括：调用定时器的回调函数、从红黑树中移除该定时器、根据回调函数的返回值决定是否重新启动该定时器等等：
 
 ```cpp
 	for (index = 0; index < HRTIMER_MAX_CLOCK_BASES; index++) {
