--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -294,7 +294,7 @@ void hrtimer_run_queues(void)
 		return;
 ```
 
-如果`hrtimer_hres_active`返回false，说明**目前处于低精度模式下**，则继续处理，它用一个for循环**遍历各个时间基准系统**，查询**每个hrtimer\_clock\_base**对应红黑树的左下节点，判断它的时间是否到期，如果到期，通过__run_hrtimer函数，对到期定时器进行处理，包括：调用定时器的回调函数、从红黑树中移除该定时器、根据回调函数的返回值决定是否重新启动该定时器等等：
+如果`hrtimer_hres_active`返回false，说明**目前处于低精度模式下**，则继续处理，它用一个for循环**遍历各个时间基准系统**，查询**每个hrtimer\_clock\_base**对应红黑树的左下节点，判断它的时间是否到期，如果到期，通过`__run_hrtimer`函数，对到期定时器进行处理，包括：调用定时器的回调函数、从红黑树中移除该定时器、根据回调函数的返回值决定是否重新启动该定时器等等：
 
 ```cpp
 	for (index = 0; index < HRTIMER_MAX_CLOCK_BASES; index++) {
