--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -294,7 +294,7 @@ void hrtimer_run_queues(void)
 		return;
 ```
 
-如果`hrtimer_hres_active`返回false，说明**目前处于低精度模式下**，则继续处理，它用一个for循环**遍历各个时间基准系统**，查询**每个hrtimer\_clock\_base**对应红黑树的左下节点，判断它的时间是否到期，如果到期，通过`__run_hrtimer`函数，对到期定时器进行处理，包括：调用定时器的回调函数、从红黑树中移除该定时器、根据回调函数的返回值决定是否重新启动该定时器等等：
+如果`hrtimer_hres_active`返回false，说明**目前处于低精度模式下**，则继续处理，它用一个for循环**遍历各个时间基准系统**，查询**每个hrtimer\_clock\_base**对应**红黑树的左下节点**，判断它的时间是否到期，如果到期，通过`__run_hrtimer`函数，对到期定时器进行处理，包括：**调用定时器的回调函数**、从红黑树中**移除该定时器**、根据**回调函数**的**返回值决定是否重新启动该定时器**等等：
 
 ```cpp
 	for (index = 0; index < HRTIMER_MAX_CLOCK_BASES; index++) {
@@ -327,11 +327,11 @@ void hrtimer_run_queues(void)
 
 ### 3.2.2. 高精度模式
 
-切换到高精度模式后，原来给cpu提供tick事件的`tick_device`（`clock_event_device`）会被高精度定时器系统接管，它的中断事件回调函数被设置为`hrtimer_interrupt`，红黑树中最左下的节点的定时器的到期时间被编程到该`clock_event_device`中，这样每次`clock_event_device`的中断意味着**至少有一个高精度定时器到期**。
+切换到高精度模式后，原来**给cpu提供tick事件**的`tick_device`（`clock_event_device`）会**被高精度定时器系统接管**，它的中断事件回调函数被设置为`hrtimer_interrupt`，红黑树中最左下的节点的定时器的**到期时间！！！** 被编程到该`clock_event_device`中，这样每次`clock_event_device`的**中断**意味着**至少有一个高精度定时器到期**。
 
-另外，当timekeeper系统中的时间需要修正，或者`clock_event_device`的到期事件时间被重新编程时，系统会发出`HRTIMER_SOFTIRQ`软中断，软中断的处理函数`run_hrtimer_softirq`最终也会调用`hrtimer_interrupt`函数对到期定时器进行处理，所以在这里我们只要讨论`hrtimer_interrupt`函数的实现即可。
+另外，当**timekeeper系统**中的**时间需要修正**，或者`clock_event_device`的到期事件**时间被重新编程！！！** 时，系统会发出`HRTIMER_SOFTIRQ`**软中断**，软中断的处理函数`run_hrtimer_softirq`最终也会调用`hrtimer_interrupt`函数对到期定时器进行处理，所以在这里我们只要讨论`hrtimer_interrupt`函数的实现即可。
 
-`hrtimer_interrupt`函数的**前半部分**和低精度模式下的`hrtimer_run_queues`函数完成相同的事情：它用一个for循环遍历各个时间基准系统，查询每个`hrtimer_clock_base`对应红黑树的左下节点，判断它的时间是否到期，如果到期，通过`__run_hrtimer`函数，对到期定时器进行处理，所以我们只讨论后半部分，在处理完所有到期定时器后，下一个到期定时器的到期时间保存在变量`expires_next`中，接下来的工作就是把这个到期时间编程到`tick_device`中：
+`hrtimer_interrupt`函数的**前半部分**和低精度模式下的`hrtimer_run_queues`函数完成相同的事情：它用一个for循环**遍历各个时间基准系统**，查询每个`hrtimer_clock_base`对应红黑树的左下节点，判断它的**时间是否到期**，如果到期，通过`__run_hrtimer`函数，对到期定时器进行处理，所以我们只讨论后半部分，在处理完所有到期定时器后，下一个到期定时器的到期时间保存在变量`expires_next`中，接下来的工作就是把这个到期时间编程到`tick_device`中：
 
 ```cpp
 void hrtimer_interrupt(struct clock_event_device *dev)
