--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -272,6 +272,8 @@ int __hrtimer_start_range_ns(struct hrtimer *timer, ktime_t tim,
 }
 ```
 
+添加到红黑树, 如果是最早要到期的(最左节点), 对其编程.
+
 ## 3.2. hrtimer的到期处理
 
 **高精度定时器系统**有**3个入口**可以对**到期定时器**进行处理，它们分别是：
