--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -58,14 +58,14 @@ LVT timer提供了三种计数模式。
 
 在one\-shot模式里，当current\-count的值减为0时，产生**timer中断**，**current\-count的值维持在0不变**，除非**写入新的initial\-count值**。
 
-```x86asm
+```assembly
 ； 设置 LVT timer
        mov DWORD [APIC_BASE + LVT_TIMER]，TIMER_ONE_SHOT | APIC_TIMER_VECTOR
 ； 写入 initial-count 值
        mov DWORD [APIC_BASE + TIMER_ICR]，256
 ```
 
-上面的代码向LVT timer寄存器写入设置的值使用了one\-shot模式。**initial\-count寄存器**被写入256值。一旦写入initial\-count值，APIC timer就开始计数。
+上面的代码向**LVT timer寄存器**写入设置的值使用了one\-shot模式。**initial\-count寄存器**被写入256值。一旦写入initial\-count值，APIC timer就开始计数。
 
 ### 2.1.2. Periodic计数模式(定期)
 
