--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/1. APIC体系概述.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/1. APIC体系概述.md
@@ -34,7 +34,9 @@
 
 ## 1.1 Local APIC
 
-**每个logical processor（逻辑处理器**）都有自己的**local APIC**，每个local APIC包括了**一组local APIC寄存器**，用来**控制local和external中断的产生、发送和接收**等，也**产生和发送IPI（处理器间的中断消息**）。**local APIC寄存器**组以**内存映射形式(不是I/O映射方式**)映射到**物理地址空间**上，因此软件可以使用**MOV指令**进行访问。
+**每个logical processor（逻辑处理器**）都有自己的**local APIC**，每个local APIC包括了**一组local APIC寄存器**，用来**控制local和external中断的产生、发送和接收**等，也**产生和发送IPI（处理器间的中断消息**）。
+
+**local APIC寄存器**组以**内存映射形式(不是I/O映射方式**)映射到**物理地址空间**上，因此软件可以使用**MOV指令**进行访问。
 
 然而在**x2APIC模式**上local APIC**寄存器映射到MSR寄存器组**来**代替映射内存**，软件使用**RDMSR和WRMSR指令**来**访问local APIC寄存器**。
 
