--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化.md
@@ -1,5 +1,8 @@
 
 每个逻辑处理器都有自己的local APIC组件. 当guest读取local APIC寄存器时, 将返回物理的local APIC寄存器值. 同样, 当guest写local APIC寄存器时, 也将写入物理的local APIC寄存器.
+
+# 监控guest访问local APIC
+
 # local APIC虚拟化机制
 
 前面一节介绍的local APIC虚拟化原理是使用EPT映射机制或MSR bitmap机制来监控guest访问local APIC页面, 并模拟写入和读取local APIC寄存器.
@@ -14,3 +17,19 @@ VMX引进了原生的local APIC虚拟化机制, 由VMCS的secondary processor-ba
 - APIC-register virtualization(APIC寄存器虚拟化).
 - Virtua-interrupt delivery(虚拟中断的提交).
 - Posted-interrupt processing(通告的中断处理).
+
+# APIC-access page
+
+# 虚拟化x2APIC MSR组
+
+# virtual-APIC page
+
+# APIC-access VM-exit
+
+# local APIC虚拟化操作
+
+# 虚拟中断的评估与delivery
+
+# posted-interrupt处理
+
+posted-interrupt
