--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化.md
@@ -32,4 +32,7 @@ VMX引进了原生的local APIC虚拟化机制, 由VMCS的secondary processor-ba
 
 # posted-interrupt处理
 
-posted-interrupt
+posted-interrupt processing(通告中断处理)在较早处理器并不支持. VMM通过检查Pin-based VM-execution control字段的"process posted interrupts"位(bit 7)是否允许设为1来检查处理器是否支持(见2.5.6.1).
+
+posted-interrupt(直译为"通告中断")是指**VMM**张贴出来给guest进行处理的虚拟中断. **guest**收到一个**通知**(**向量号**为**notification vector**的**外部中断**)后, 将张贴的**通告中断请求列表**复制到**virtual\-APIC page**页面的**VIRR**里, 从而**更新虚拟中断请求列表**, 然后进行虚拟中断的评估与delivery.
+
