--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化.md
@@ -34,5 +34,16 @@ VMX引进了原生的local APIC虚拟化机制, 由VMCS的secondary processor-ba
 
 posted-interrupt processing(通告中断处理)在较早处理器并不支持. VMM通过检查Pin-based VM-execution control字段的"process posted interrupts"位(bit 7)是否允许设为1来检查处理器是否支持(见2.5.6.1).
 
-posted-interrupt(直译为"通告中断")是指**VMM**张贴出来给guest进行处理的虚拟中断. **guest**收到一个**通知**(**向量号**为**notification vector**的**外部中断**)后, 将张贴的**通告中断请求列表**复制到**virtual\-APIC page**页面的**VIRR**里, 从而**更新虚拟中断请求列表**, 然后进行虚拟中断的评估与delivery.
+posted-interrupt(直译为"通告中断")是指**VMM**张贴出来给guest进行处理的虚拟中断. **guest**收到一个**通知**(**向量号**为**notification vector**的**外部中断**)后, 将张贴的**通告中断请求列表！！！** 复制到**virtual\-APIC page！！！**页面的**VIRR**里, 从而**更新虚拟中断请求列表**, 然后进行**虚拟中断的评估与delivery**.
 
+## 启用posted-interrupt处理机制
+
+## posted-interrupt的通知向量号
+
+VMM需要在posted-interrupt notification vector字段里提供一个通知向量号(见3.5.13). 那么, local APIC接收到的这个外部中断可被成为"通知中断", 其作用是通知guest进行posted-interrupt的处理.
+
+在**guest！！！** 中, 当local APIC收到外部中断请求时, 处理器检查这个外部中断请求的向量号与notification vector(通知向量号)是否相等(即检查是否为通知中断). 相等则将posted-interrupt描述符内的PIR请求列表复制到VIRR, 形成新的虚拟中断请求列表, 然后执行virtual-interrupt的评估与delivery操作. 如图7-8.
+
+![2020-01-20-17-41-01.png](./images/2020-01-20-17-41-01.png)
+
+当外部中断向量号不等于notification vector时, 则产生VM-exit. 由于"
