--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化.md
@@ -42,7 +42,7 @@ posted-interrupt(直译为"通告中断")是指**VMM**张贴出来给guest进行
 
 VMM需要在posted-interrupt notification vector字段里提供一个通知向量号(见3.5.13). 那么, local APIC接收到的这个外部中断可被成为"通知中断", 其作用是通知guest进行posted-interrupt的处理.
 
-在**guest！！！** 中, 当local APIC收到外部中断请求时, 处理器检查这个外部中断请求的向量号与notification vector(通知向量号)是否相等(即检查是否为通知中断). 相等则将posted-interrupt描述符内的PIR请求列表复制到VIRR, 形成新的虚拟中断请求列表, 然后执行virtual-interrupt的评估与delivery操作. 如图7-8.
+在**guest！！！** 中, 当local APIC收到外部中断请求时, 处理器检查这个外部中断请求的向量号与`notification vector`(通知向量号)是否相等(即检查是否为通知中断). 相等则将`posted-interrupt`描述符内的PIR请求列表复制到VIRR, 形成新的虚拟中断请求列表, 然后执行`virtual-interrupt`的评估与delivery操作. 如图7-8.
 
 ![2020-01-20-17-41-01.png](./images/2020-01-20-17-41-01.png)
 
