--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段.md
@@ -8,7 +8,9 @@
 - 从一个被称为"`posted-interrupt descriptor`"的结构中读取**预先设置**好的中**断向量号**, 并复制到virtual-APIC page内的VIRR寄存器中, 从而构成virtual-interrupt请求.
 - 对virtual-interrupt进行评估. 通过评估后, 未屏蔽的虚拟中断将由guest-IDT进行deliver执行(见7.2.13)
 
-这个通知性质的外部中断号提供在posted-interrupt notification vector字段, 这个字段为16位宽. 在使用posted-interrupt processing机制前, VMM需要设置这个通知中断向量号以供处理器进行检查对比.
+这个**通知性质的外部中断号**提供在`posted-interrupt notification vector`字段, 这个字段为16位宽. 
+
+在**使用posted-interrupt processing机制前！！！**, VMM**需要设置**这个通知中断向量号以**供处理器进行检查对比**.
 
 # posted-interrupt descriptor address字段
 
