--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
@@ -188,7 +188,7 @@ qemu-img-1.5.3-160.el7_6.1.x86_64
 # 安装时, 运行yum install qemu-kvm即可
 ```
 
-由于libvirt是跨平台的，而且还支持微软公司的**Hyper\-V虚拟化**，所以在Windows上也可以安装libvirt，甚至可以编译libvirt。
+由于libvirt是**跨平台**的，而且还支持微软公司的**Hyper\-V虚拟化**，所以在Windows上也可以安装libvirt，甚至可以编译libvirt。
 
 可以到libvirt官方的网页（ https://libvirt.org/windows.html ）中查看更多关于libvirt对Windows的支持。
 
