--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/5. 网络配置.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/5. 网络配置.md
@@ -870,7 +870,7 @@ This http index file in kvm-guest￼
 
 在**没有任何“\-net”参数**时，**QEMU默认**使用的是“\-**net nic\-net user**”的参数，提供了一种**用户模式（user\-mode**）的网络模拟。
 
-使用**用户模式的网络**的客户机可以连通**宿主机及外部的网络**。
+使用**用户模式的网络！！！** 的**客户机！！！** 可以连通**宿主机！！！及外部的网络！！！**。
 
 **用户模式**网络**完全是由QEMU自身实现！！！** 的，**不依赖**于其他的工具（如前面提到的bridge\-utils、dnsmasq、iptables等），而且**不需要root用户权限**（前面介绍过的bridge模式和NAT模式在配置宿主机网络和设置iptables规则时一般都需要root用户权限）。
 
@@ -920,7 +920,7 @@ QEMU使用**Slirp￼**实现了**一整套TCP/IP协议栈**，并且使用这个
 
 下面用一个示例来介绍用户模式网络的使用。
 
-1）通过如下的命令行启动了一个客户机，为它配置**用户模式网络**，并且开启TFTP服务。还将宿主机的5022端口转发到客户机的22端口（SSH服务默认端口），将宿主机的5080端口转发到客户机的80端口（HTTP服务默认端口）。
+1）通过如下的命令行启动了一个客户机，为它配置**用户模式网络**，并且开启**TFTP服务**。还将宿主机的5022端口转发到客户机的22端口（SSH服务默认端口），将宿主机的5080端口转发到客户机的80端口（HTTP服务默认端口）。
 
 ```
 qemu-system-x86_64 -smp 4 -m 4G -enable-kvm rhel7.img -device e1000,netdev=usernet0 -netdev user,id=usernet0,tftp=/root/tftp_root,hostfwd=tcp::5022-:22,hostfwd= tcp::5080-:80
