--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/3. virsh-manager.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/3. virsh-manager.md
@@ -3,14 +3,14 @@
 
 <!-- code_chunk_output -->
 
-* [1 virt\-manager简介](#1-virt-manager简介)
-* [2 virt\-manager编译和安装](#2-virt-manager编译和安装)
-* [3 virt-manager使用](#3-virt-manager使用)
-	* [3.1 在RHEL 7.3中打开virt\-manager](#31-在rhel-73中打开virt-manager)
+- [1 virt-manager简介](#1-virt-manager简介)
+- [2 virt\-manager编译和安装](#2-virt-manager编译和安装)
+- [3 virt-manager使用](#3-virt-manager使用)
+  - [3.1 在RHEL 7.3中打开virt\-manager](#31-在rhel-73中打开virt-manager)
 
 <!-- /code_chunk_output -->
 
-# 1 virt\-manager简介
+# 1 virt-manager简介
 
 virt\-manager￼是虚拟机管理器（Virtual Machine Manager）这个应用程序的缩写，也是该管理工具的软件包名称。
 
