--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
@@ -9,7 +9,15 @@
 
 ## 处理器编号
 
+CPUIndex指示处理器的编号, 从0开始编号.
+
+在PCB(Processor Control Block, 处理器控制块)结构中的ProcessorIndex记录.
+
 ## 运行阶段
+
+Stage指示系统当前运行在哪个阶段. 系统平台分为三个阶段(参见第1.5节).
+
+- Stage1: 
 
 ## 处理器个数
 
