--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
@@ -3,23 +3,31 @@
 
 以4个逻辑处理器平台为例, 机器启动后最终进入一个等待状态, 如图.
 
+图1\-1:
+
 ![2019-12-28-18-06-10.png](./images/2019-12-28-18-06-10.png)
 
 图1-1所显示的信息是处理器最后调用`updata_system_status`例程的结果, 它输出当前系统的信息, 在`lib/crt.asm`模块里实现.
 
 ## 处理器编号
 
-CPUIndex指示处理器的编号, 从0开始编号.
+**CPUIndex**指示处理器的编号, 从0开始编号.
 
 在PCB(Processor Control Block, 处理器控制块)结构中的ProcessorIndex记录.
 
 ## 运行阶段
 
-Stage指示系统当前运行在哪个阶段. 系统平台分为三个阶段(参见第1.5节).
+**Stage**指示系统当前运行在哪个阶段. 系统平台分为三个阶段(参见第1.5节).
 
-- Stage1: 
+- Stage1: 处理器处于32位未分页的保护模式, 此时关闭分页机制.
+- Stage2: 处理器处于32位已分页的保护模式, 这是legacy模式的最终环境.
+- Stage3: 处理器处于IA\-32e(即long\-mode)下的64位模式.
+
+图1\-1显示, 处理器当前处于stage3阶段(64位模式).
 
 ## 处理器个数
+
+CPUs 指示当前可用的处理器个数, 这是在
 
 ## 处理器模型
 
