--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
@@ -27,9 +27,13 @@
 
 ## 处理器个数
 
-CPUs 指示当前可用的处理器个数, 这是在
+CPUs 指示当前可用的处理器个数, 这是在启动阶段检测出来的. 实际上, 使用代码枚举出来更可靠. 因为, 存在**BIOS关闭某些处理器**的可能性.
+
+图显示, 有4个可用的逻辑处理器
 
 ## 处理器模型
+
+CpuModel 指示处理器的模型信息, 包括了处理器家族与型号. 显示当前处理器是 0625H. 06H指P6家族(包括了Core家族), 25H属于第1代的Core架构, 具体为Westmere架构.
 
 ## VMX开启
 
