--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
@@ -45,7 +45,7 @@ VMX enable 指示VMX模式已经开启, VMX disable则指示VMX模式关闭.
 
 EPT enable指示EPT映射机制已经开启.
 
-处理器在进入guest前, 根绝guest的设置决定是否开启
+处理器在进入guest前, 根绝guest的设置决定是否开启EPT映射机制.
 
 # 使用VMware
 
