--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
@@ -53,7 +53,7 @@ EPT enable指示EPT映射机制已经开启.
 
 下面介绍如何使用VMware运行例子中的`demo.img`映像文件.
 
-运行VMware后, 使用典型配置新建一个虚拟机, 名为"demo". "客户机操作系统"选"其他", 版本为"其他64位". 虚拟机内存使用256MB足够.
+运行VMware后, 使用典型配置新建一个虚拟机, 名为"**demo**". "**客户机操作系统**"选"**其他**", 版本为"**其他64位**". **虚拟机内存**使用**256MB**足够.
 
 接下来设置处理器个数以及虚拟化引擎, 如图1-2.
 
