--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86汇编语言_从实模式到保护模式/第一部分 预备知识/4. 虚拟机的安装和使用/2. 创建和使用虚拟机.md
+++ b/Architecture/x86/Learning/x86汇编语言_从实模式到保护模式/第一部分 预备知识/4. 虚拟机的安装和使用/2. 创建和使用虚拟机.md
@@ -4,9 +4,9 @@ VHD 规范最早起源于Connectix 公司的虚拟机软件 Connectix Virtual PC
 
 ## 2.5 虚拟硬盘简介
 
-采用固定尺寸的VHD虚拟硬盘，因为其简单性。它仅包含两部分，前面是数据区，用来模拟实际的硬盘空间，后面跟一个512字节的结尾。（2004年前规范是511字节）
+采用**固定尺寸的VHD虚拟硬盘**，因为其**简单性**。它**仅包含两部分**，前面是**数据区**，用来**模拟实际的硬盘空间**，后面跟一个**512字节的结尾**。（2004年前规范是511字节）
 
-要访问硬盘，运行中的程序必须至少向硬盘控制器提供4个参数，分别是磁头号、磁道号、扇区号，以及访问意图（读还是写）。
+要**访问硬盘**，运行中的程序必须至少向硬盘控制器提供4个参数，分别是磁头号、磁道号、扇区号，以及访问意图（读还是写）。
 
 磁盘读写以扇区为最小单位。所以读写数据，至少是1个扇区。
 
