--- a/Architecture/x86/Learning/x86汇编语言_从实模式到保护模式/第一部分 预备知识/4. 虚拟机的安装和使用/2. 创建和使用虚拟机.md
+++ b/Architecture/x86/Learning/x86汇编语言_从实模式到保护模式/第一部分 预备知识/4. 虚拟机的安装和使用/2. 创建和使用虚拟机.md
@@ -18,7 +18,7 @@ VHD 规范最早起源于Connectix 公司的虚拟机软件 Connectix Virtual PC
 
 注: 看硬盘原理
 
-如图 4\-16 所示，为了标志一个文件是VHD格式的虚拟硬盘，并为使用它的虚拟机提供该硬盘的参数，在 VHD 文件的结尾，包含了512字节的格式信息。Windows下查看可以使用HexView。
+如图 4\-16 所示，为了**标志**一个文件是**VHD格式**的**虚拟硬盘**，并为使用它的虚拟机提供该硬盘的参数，在 VHD 文件的结尾，包含了512字节的格式信息。Windows下查看可以使用HexView。
 
 如图 4-16 所示，文件尾信息是以一个字符串“conectix”开始的。这个标志用来告诉试图打开它的虚拟机，这的确是一个合法的VHD文件。该标志称为VHD创建者标识，就是说，该公司（conectix）创建了 VHD 文件格式的最初标准。
 
