--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第3章 编写本书的实验例子/1. 实验的运行环境.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第3章 编写本书的实验例子/1. 实验的运行环境.md
@@ -23,7 +23,7 @@
 
 # 使用FAT32文件格式
 
-在使用软盘启动时，我们直接将boot代码写在MBR里。而当使用U盘启动时会遇到一些麻烦，我们的代码写在MBR里, 某些机器将启动不了.
+在使用**软盘启动**时，我们直接将boot代码写在MBR里。而当使用U盘启动时会遇到一些麻烦，我们的代码写在MBR里, 某些机器将启动不了.
 
 因此, 当使用U盘在真实机器上测试时, 将使用FAT32文件格式, 也就是硬盘映像c.img使用FAT32文件格式.
 
