--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第3章 编写本书的实验例子/1. 实验的运行环境.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第3章 编写本书的实验例子/1. 实验的运行环境.md
@@ -23,17 +23,17 @@
 
 # 使用FAT32文件格式
 
-在使用**软盘启动**时，我们直接将boot代码写在MBR里。而当使用U盘启动时会遇到一些麻烦，我们的代码写在MBR里, 某些机器将启动不了.
+在使用**软盘启动**时，我们直接将**boot代码**写在**MBR**里。而当使用U盘启动时会遇到一些麻烦，我们的代码写在MBR里, 某些机器将启动不了.
 
-因此, 当使用U盘在真实机器上测试时, 将使用FAT32文件格式, 也就是硬盘映像c.img使用FAT32文件格式.
+因此, 当使用U盘在真实机器上测试时, 将使用FAT32文件格式, 也就是**硬盘映像c.img**使用**FAT32文件格式**.
 
 如下,对于软盘映像(demo.img)和硬盘映像(c.img), 两种文件组织形式
 
 ![2019-11-30-19-44-34.png](./images/2019-11-30-19-44-34.png)
 
-⓵ 软盘映像文件(demo.img): 将boot模块直接写入软盘的0扇区, 那么boot代码就是我们的MBR程序, **BIOS**将读软盘的0扇区(boot代码)到内存的7c00h位置.
+⓵ 软盘映像文件(demo.img): 将**boot模块**直接写入**软盘的0扇区**, 那么boot代码就是我们的MBR程序, **BIOS**将读软盘的0扇区(boot代码)到内存的7c00h位置.
 
-⓶ 硬盘映像文件(c.img)和U盘: 将boot模块写入映像文件和U盘的63号扇区, BIOS读取硬盘或U盘的0扇区(这是FAT32文件格式启动盘生成的MBR代码)代码到内存7c00h, 然后再由这个MBR代码来从63号扇区读取我们的boot程序.
+⓶ 硬盘映像文件(c.img)和U盘: 将**boot模块**写入**映像文件和U盘**的63号扇区, BIOS读取硬盘或U盘的0扇区(这是FAT32文件格式启动盘生成的MBR代码)代码到内存7c00h, 然后再由这个MBR代码来从63号扇区读取我们的boot程序.
 
 无论如何, boot程序最终是运行在7c00h区域里, boot程序的职责是负责加载后续的模式(包括lib16、lib32、lib64、protected和long模式)。
 
