--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第3章 编写本书的实验例子/1. 实验的运行环境.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第3章 编写本书的实验例子/1. 实验的运行环境.md
@@ -31,9 +31,9 @@
 
 ![2019-11-30-19-44-34.png](./images/2019-11-30-19-44-34.png)
 
-⓵ 软盘映像文件(demo.img): 将**boot模块**直接写入**软盘的0扇区**, 那么boot代码就是我们的MBR程序, **BIOS**将读软盘的0扇区(boot代码)到内存的7c00h位置.
+⓵ 软盘映像文件(demo.img): 将**boot模块**直接写入**软盘的0扇区**, 那么boot代码就是我们的MBR程序, **BIOS**将读软盘的**0扇区**(**boot代码**)到内存的**7c00h**位置.
 
-⓶ 硬盘映像文件(c.img)和U盘: 将**boot模块**写入**映像文件和U盘**的63号扇区, BIOS读取硬盘或U盘的0扇区(这是FAT32文件格式启动盘生成的MBR代码)代码到内存7c00h, 然后再由这个MBR代码来从63号扇区读取我们的boot程序.
+⓶ 硬盘映像文件(c.img)和U盘: 将**boot模块**写入**映像文件和U盘**的**63号扇区**, **BIOS**读取**硬盘或U盘**的**0扇区**(这是FAT32文件格式启动盘生成的**MBR代码**)代码到**内存7c00h**, 然后再由这个MBR代码来从63号扇区读取我们的boot程序.
 
 无论如何, boot程序最终是运行在7c00h区域里, boot程序的职责是负责加载后续的模式(包括lib16、lib32、lib64、protected和long模式)。
 
