--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
@@ -77,7 +77,7 @@ Bochs只支持基本的VMX特性. 所以不使用
 
 # 在真实机器上运行
 
-在后面看到, 实现了一个Build工具, 用于编译和生成所需
+在后面看到, 实现了一个Build工具, 用于编译和生成所需的映像文件. 其中包括写入物理U盘, 我们将使用U盘启动, 在真实机器上运行.
 
 # Build工具
 
