--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -2,6 +2,11 @@
 
 多数模块, 只需要维护一份代码, 即并不需要分别编写64位版本以及32位版本的代码. 极少部分才区分
 
-# 使用符号_X64
+# 使用符号__X64
 
-为了做到64位和32位版本只维护一份代码, 
+为了做到64位和32位版本只维护一份代码, 需要将代码以32位形式进行编译. 同时, 引进__X64符号控制机器码的生成.
+
+```assembly
+bits 32             ;;重要, 以32位形式进行编译
+
+```
