--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -8,5 +8,17 @@
 
 ```assembly
 bits 32             ;;重要, 以32位形式进行编译
-
+        ... ...
+%ifdef __X64
+        ;;
+        ;; 此处插入64位特定的代码!
+        ;;
+%else
+        ;;
+        ;; 此处插入32位特定的代码!
+        ;;
+%endif
+        ... ...
 ```
+
+注意: 由于
