--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -23,4 +23,7 @@ bits 32             ;;重要, 以32位形式进行编译
 
 注意: 由于在64-bit模式下, 绝大多数指令的操作位默认为32位, 导致多数指令机器码在64位和32位环境下是一样的! 只有少量的指令, 我们需要进行特别处理. 因此, 引进`__X64`是为了解决某些特定指令的使用.
 
-代码统一在32位下编译后, 处理器无论运行在64
+代码统一在32位下编译后, 处理器无论运行在64-bit模式下, 还是32位保护模式下, 都能正确执行. 当然, 除了某些需要特殊处理器的指令, 下面了解一下.
+
+# 指令操作数
+
