--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -27,4 +27,4 @@ bits 32             ;;重要, 以32位形式进行编译
 
 # 指令操作数
 
-64位和32位混合编译之前, 有必要先了解下x86/64体系中指令的operand size(操作数宽度), 
+64位和32位混合编译之前, 有必要先了解下x86/64体系中指令的operand size(操作数宽度), 以及address size(地址宽度)
