--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -29,3 +29,4 @@ bits 32             ;;重要, 以32位形式进行编译
 
 64位和32位混合编译之前, 有必要先了解下x86/64体系中指令的operand size(操作数宽度), 以及address size(地址宽度)相关知识. 更详细介绍看 http://www.mouseos.com/x64/index.html .
 
+指令的操作数大小及地址大小有default(默认)和effective(有效)两种情况
