--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -31,3 +31,6 @@ bits 32             ;;重要, 以32位形式进行编译
 
 指令的操作数大小及地址大小有default(默认)和effective(有效)两种情况. 表1\-1列出处理器各种工作模式下的default operand size(默认操作数宽度)与default address size(默认地址宽度), effective operand size(有效的操作数宽度)与effective address size(有效的地址宽度).
 
+![2020-01-24-22-29-47.png](./images/2020-01-24-22-29-47.png)
+
+![2020-01-24-22-33-24.png](./images/2020-01-24-22-33-24.png)
