--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -34,3 +34,12 @@ bits 32             ;;重要, 以32位形式进行编译
 ![2020-01-24-22-29-47.png](./images/2020-01-24-22-29-47.png)
 
 ![2020-01-24-22-33-24.png](./images/2020-01-24-22-33-24.png)
+
+指令的默认operand size、address size由CS.D和CS.L位(IA\-32e/long\-mode可用)决定.
+
+- 
+
+...
+
+# 64-bit模式下的其他指令处理
+
