--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
@@ -149,13 +149,13 @@
       - [权限权查](#权限权查)
       - [limit检查](#limit检查)
       - [Data段描述符类型的检查](#data段描述符类型的检查)
-    - [4.5.7 TR的显式加载](#457-tr的显式加载)
-      - [4.5.7.1 置Busy标志位](#4571-置busy标志位)
-      - [4.5.8 使用Call\-gate调用下的Stack切换](#458-使用call-gate调用下的stack切换)
-      - [4.5.8.1 TSS段里的栈指针](#4581-tss段里的栈指针)
-    - [4.5.9 在long\-mode下使用Call\-gate调用的Stack切换](#459-在long-mode下使用call-gate调用的stack切换)
-      - [4.5.9.1 long\-mode下的TSS段里的栈指针](#4591-long-mode下的tss段里的栈指针)
-      - [4.5.9.2 加载Null selector到SS寄存器](#4592-加载null-selector到ss寄存器)
+    - [TR的显式加载](#tr的显式加载)
+      - [置Busy标志位](#置busy标志位)
+      - [使用Call-gate调用下的Stack切换](#使用call-gate调用下的stack切换)
+      - [TSS段里的栈指针](#tss段里的栈指针)
+    - [在long-mode下使用Call-gate调用的Stack切换](#在long-mode下使用call-gate调用的stack切换)
+      - [long-mode下的TSS段里的栈指针](#long-mode下的tss段里的栈指针)
+      - [加载Null selector到SS寄存器](#加载null-selector到ss寄存器)
     - [4.5.10 使用RETF指令返回时的Stack切换](#4510-使用retf指令返回时的stack切换)
     - [4.5.11 long\-mode下使用RETF指令返回时的Stack切换](#4511-long-mode下使用retf指令返回时的stack切换)
       - [4.5.11.1 返回到compatibility模式时](#45111-返回到compatibility模式时)
@@ -3251,7 +3251,7 @@ mov eax，LOAD_SS_REG     ； 编号值
 call __clib32_service_enter   ； 调用 conforming 库
 ```
 
-### 4.5.7 TR的显式加载
+### TR的显式加载
 
 在**Stack的切换**环节中，**TSS段**是很重要的数据结构，**没有TSS段完成不了Stack的切换**，因此，在系统**初始化阶段必须加载TR**，完成对TSS段环境的设置。在**TSS任务切换机制**里，处理器会**隐式地加载TR**。
 
@@ -3262,11 +3262,11 @@ ltr ax
 
 在这里，我们使用**ltr指令显式地加载TR**，处理器会对TSS selector和TSS描述符进行在10.5.4.4节4中所描述的常规检查。通过检查后，处理器将TSS selector加载到TRselector域，TSS描述符会加载到TR的Cache部分。
 
-#### 4.5.7.1 置Busy标志位
+#### 置Busy标志位
 
 在**TSS描述符加载到TR**后，处理器会将**GDT(！！！TSS描述符只能存在于GDT！！！**)的**TSS描述符Busy标志位置位**，指示这个TSS描述符不可用。
 
-#### 4.5.8 使用Call\-gate调用下的Stack切换
+#### 使用Call-gate调用下的Stack切换
 
 当使用gate（包括Call\-gate，Interrupt\-gate及Trap\-gate）从**低权限进入高权限**时，处理器从TSS段里取出**相应权限级别的ESP**值，装入**ESP寄存器**，然后执行压栈操作。
 
@@ -3276,7 +3276,7 @@ ltr ax
 
 现在处理器**加载新的SS和ESP值**后，**已经切换到0级的stack**里，在**当前的Stack（0级的Stack**）里依次**压入调用者(！！！原来的！！！)的SS、ESP、CS，以及EIP值**，然后转去**执行0级代码**。
 
-#### 4.5.8.1 TSS段里的栈指针
+#### TSS段里的栈指针
 
 在**TSS段**里存放了**3个级别**的栈指针**SS和ESP**值，如下所示。
 
@@ -3295,11 +3295,11 @@ ltr ax
 
 在将SS selector加载到SS寄存器之前，处理器会进行检查，这个检查和以前所述的CS和SS寄存器隐式加载的情形一样。
 
-### 4.5.9 在long\-mode下使用Call\-gate调用的Stack切换
+### 在long-mode下使用Call-gate调用的Stack切换
 
 在**long\-mode**使用**Call\-gate**进行调用从而进入到**64位模式的Call\-gate服务例程**。权限的切换将使处理器进入更高权限的64位模式，这时候使用64位的stack结构，这一点体现在从compatbility模式里使用Call\-gate进入更高权限代码时，处理器将切换到64位模式。
 
-#### 4.5.9.1 long\-mode下的TSS段里的栈指针
+#### long-mode下的TSS段里的栈指针
 
 在**long\-mode**下，**TSS段**里并**不保存SS Selector值(！！！**)，3个级别的**栈指针扩展为64位**。
 
@@ -3307,7 +3307,7 @@ ltr ax
 
 在**long\-mode**下进行**stack切换**时并**不需要SS slector值**，因此在long\-mode的**TSS段**里并**不存在SS selector**。
 
-#### 4.5.9.2 加载Null selector到SS寄存器
+#### 加载Null selector到SS寄存器
 
 在**long\-mode**下，**切换到高权限代码**里，处理器将**自动加载一个Null selector到SS寄存器(！！！**)里，这是在**64位的TSS段里没有SS selector的原因(！！！**)。
 
