--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
@@ -156,17 +156,17 @@
     - [在long-mode下使用Call-gate调用的Stack切换](#在long-mode下使用call-gate调用的stack切换)
       - [long-mode下的TSS段里的栈指针](#long-mode下的tss段里的栈指针)
       - [加载Null selector到SS寄存器](#加载null-selector到ss寄存器)
-    - [4.5.10 使用RETF指令返回时的Stack切换](#4510-使用retf指令返回时的stack切换)
-    - [4.5.11 long\-mode下使用RETF指令返回时的Stack切换](#4511-long-mode下使用retf指令返回时的stack切换)
-      - [4.5.11.1 返回到compatibility模式时](#45111-返回到compatibility模式时)
-      - [4.5.11.2 返回到64位模式时](#45112-返回到64位模式时)
-      - [4.5.11.3 从伪造的Call\-gate服务例程RETF返回时](#45113-从伪造的call-gate服务例程retf返回时)
-    - [4.5.12 调用中断或中断/异常发生时的Stack切换](#4512-调用中断或中断异常发生时的stack切换)
-    - [4.5.13 long\-mode下的中断Stack切换](#4513-long-mode下的中断stack切换)
-      - [4.5.13.1 IST（Interrupt Stack Table）](#45131-istinterrupt-stack-table)
-      - [4.5.13.2 从compatibility模式进入64位模式](#45132-从compatibility模式进入64位模式)
-      - [4.5.13.3 从64位模式进入64位模式](#45133-从64位模式进入64位模式)
-    - [4.5.14 使用IRET指令返回时的Stack切换](#4514-使用iret指令返回时的stack切换)
+    - [使用RETF指令返回时的Stack切换](#使用retf指令返回时的stack切换)
+    - [long-mode下使用RETF指令返回时的Stack切换](#long-mode下使用retf指令返回时的stack切换)
+      - [返回到compatibility模式时](#返回到compatibility模式时)
+      - [返回到64位模式时](#返回到64位模式时)
+      - [从伪造的Call-gate服务例程RETF返回时](#从伪造的call-gate服务例程retf返回时)
+    - [调用中断或中断/异常发生时的Stack切换](#调用中断或中断异常发生时的stack切换)
+    - [long-mode下的中断Stack切换](#long-mode下的中断stack切换)
+      - [IST（Interrupt Stack Table）](#istinterrupt-stack-table)
+      - [从compatibility模式进入64位模式](#从compatibility模式进入64位模式)
+      - [从64位模式进入64位模式](#从64位模式进入64位模式)
+    - [使用IRET指令返回时的Stack切换](#使用iret指令返回时的stack切换)
       - [4.5.14.1 long-mode下的IRETQ返回Stack切换](#45141-long-mode下的iretq返回stack切换)
       - [4.5.14.2 返回到compatibility模式时](#45142-返回到compatibility模式时)
       - [4.5.14.3 从伪造的中断handler环境中返回](#45143-从伪造的中断handler环境中返回)
@@ -3341,7 +3341,7 @@ call QDWORD far [CALLGATE_POINTER]    ； 使用64位的 call-gate 指针
 
 上面是简化的示意图，与**comaptibility模式**下的**调用不同**的是**从3级的64位Stack**切换到**0级的64位Stack**，其他处理是一致的。
 
-### 4.5.10 使用RETF指令返回时的Stack切换
+### 使用RETF指令返回时的Stack切换
 
 使用**Call\-gate**进行调用是**从低权限切往高权限**（排除同级调用的情形），而使用**retf指令返回**是从**高权限的Call\-gate服务例程切往低权限的用户代码**（排除同级返回的情形）。因此，同样是发生了权限切换和进行Stack切换。
 
@@ -3349,7 +3349,7 @@ call QDWORD far [CALLGATE_POINTER]    ； 使用64位的 call-gate 指针
 
 如果retf指令返回时检查到是切往低权限（假设从0级返回到3级时），将从**0级的stack**里**依次POP**出**EIP**、**CS**、**ESP**和**SS**值，这个**SS selector将会被加载到SS寄存器**里，**ESP值会被加载到ESP寄存器**里，那么现在的SS：ESP指针就指向当前的3级的Stack。
 
-### 4.5.11 long\-mode下使用RETF指令返回时的Stack切换
+### long-mode下使用RETF指令返回时的Stack切换
 
 在**long\-mode**下，**Call\-gate服务例程**执行在**64位模式环境**中，与使用Call\-gate进行调用时情形相对应，从Call\-gate服务例程里使用RETF指令返回时也有：
 
@@ -3359,21 +3359,21 @@ call QDWORD far [CALLGATE_POINTER]    ； 使用64位的 call-gate 指针
 
 ![config](./images/86.png)
 
-#### 4.5.11.1 返回到compatibility模式时
+#### 返回到compatibility模式时
 
 在上图的a）中，返回的目标代码段描述符L=0时，将返回到compatibility模式，目标的Stack是compatibility下的3级stack（假设从0级返回到3级的情况下），POP出来的SS和ESP值（栈内的RSP映像低32位）加载到SS寄存器和ESP寄存器里，当前的Stack已经切换到compatibility模式下。
 
-#### 4.5.11.2 返回到64位模式时
+#### 返回到64位模式时
 
 在上图的b）中，返回的**目标代码段描述符**的**L=1并且D=0**时，将**返回到64位模式**，表示**目标的Stack**也是属于**64位**的，在**栈里POP**出来的**SS和RSP**值将**加载到SS和RSP寄存器**里，**当前的Stack**已经**切换回3级的Stack**（假设从0级返回到3级的情况下）。
 
 在返回到64位模式里时，如果**从0级权限返回到1级或者2级权限**（非3级权限），在栈中的**SS值允许为Null selector**，否则是不允许的。
 
-#### 4.5.11.3 从伪造的Call\-gate服务例程RETF返回时
+#### 从伪造的Call-gate服务例程RETF返回时
 
 在前面的加载CS寄存器的情形中，以权限的切换为目的时，可以**伪造一个Call\-gate服务例程返回环境**（在前述的使用RETF指令加载CS寄存器的情形），这时可以从0级的compatibility模式返回到3级的64位模式里，也可以从compatibility模式返回到compatibility模式里。
 
-### 4.5.12 调用中断或中断/异常发生时的Stack切换
+### 调用中断或中断/异常发生时的Stack切换
 
 当**中断handler被调用（主动或被动**），**权限发生改变**时，同样会进行**Stack的切换**。在**legacy模式**下，与使用Call\-gate调用时的Stack切换的**不同之处**是：处理器会**额外压入EFLAGS**值，**有些异常**发生时还会压入**Error Code**值。
 
@@ -3383,7 +3383,7 @@ call QDWORD far [CALLGATE_POINTER]    ； 使用64位的 call-gate 指针
 
 那么SS：ESP就切换到0级的Stack，处理器依次压入**SS、ESP、EFLAGS、CS，以及EIP**值。**有时**还会压入**Error Code**值。
 
-### 4.5.13 long\-mode下的中断Stack切换
+### long-mode下的中断Stack切换
 
 在long\-mode下的**中断栈**有**很大的变化**。
 
@@ -3397,7 +3397,7 @@ call QDWORD far [CALLGATE_POINTER]    ； 使用64位的 call-gate 指针
 
 上图是前面已经介绍过的long\-mode下的Interrrupt/Trap\-gate描述符，在long\-mode下除了offset被扩展为64位外，还新增了一个**3位的IST域**，它是在**64位TSS中的IST指针的索引值**，范围值从1到7，每一个值对应一个IST（Interrupt Stack Table）指针。
 
-#### 4.5.13.1 IST（Interrupt Stack Table）
+#### IST（Interrupt Stack Table）
 
 在64位TSS里有7个IST指针值，提供可以给中断handler**额外使用的Stack区域**，如下图所示。
 
@@ -3413,15 +3413,15 @@ Interrupt/Trap\-gate描述符里的**IST**值用来**得到TSS段里对应的IST
 
 同样一个**Null selector**将**被加载到SS寄存器**里，处理器就**完成了中断栈的切换**，在经过调用到16字节边界对齐后，依次压入SS、RSP、EFALGS、CS，以及RIP值。
 
-#### 4.5.13.2 从compatibility模式进入64位模式
+#### 从compatibility模式进入64位模式
 
 如上图所示，处理器从TSS段的RSP0或IST域（依赖于Interrupt/Trap-gate描述符的IST域）里得到0级（假设从3级切换到0级）64位的Stack指针加载到RSP寄存器中，Null selector被加载到SS寄存器后，那么Stack将从compatibility模式（假设为32位）的Stack切换到64位的Stack。RSP调整到16字节边界后依次压入SS、RSP、EFLAGS、CS，以及RIP值。
 
-#### 4.5.13.3 从64位模式进入64位模式
+#### 从64位模式进入64位模式
 
 除了处理器将64位的Stack切换到同样是64位的Stack外，其余操作与从compatibility模式进入64位模式是完全一致的。
 
-### 4.5.14 使用IRET指令返回时的Stack切换
+### 使用IRET指令返回时的Stack切换
 
 原理与使用RETF指令返回时是完全一致的，如下图所示。
 
