--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -40,6 +40,10 @@ bits 32             ;;重要, 以32位形式进行编译
 - 
 
 另外, stack address(栈地址, 或栈指针)的宽度由SS.B位决定, 但不能被override(改写).
+
+- 
+
+栈地址宽度不能被address\-size override prefix(地址宽度改写前缀)修改, 例如
 ...
 
 # 64-bit模式下的其他指令处理
