--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -43,7 +43,14 @@ bits 32             ;;重要, 以32位形式进行编译
 
 - 
 
-栈地址宽度不能被address\-size override prefix(地址宽度改写前缀)修改, 例如
+栈地址宽度不能被address\-size override prefix(地址宽度改写前缀)修改, 例如下面的代码.
+
+```assembly
+DB 67h          ; address override prefix
+push eax        ; 32位的栈地址不能被改写
+```
+
+上面的示例, 企图使用地址宽度改写
 ...
 
 # 64-bit模式下的其他指令处理
