--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/2. 64位与32位代码的混合编译.md
@@ -50,7 +50,7 @@ DB 67h          ; address override prefix
 push eax        ; 32位的栈地址不能被改写
 ```
 
-上面的示例, 企图使用地址宽度改写
+上面的示例, 企图使用地址宽度改写前缀67H修改栈地址为16位是不起作用的. 
 ...
 
 # 64-bit模式下的其他指令处理
